2009-08-24  Christian Hergert  <chris@dronelabs.com>

	* PyBinding.Gui/PythonEditorCompletion.cs: Allow completion even when
	the current file parse is in an inconsistent state.

2009-08-24  Christian Hergert  <chris@dronelabs.com>

	* PyBinding/Makefile:
	* PyBinding/PyBinding.csproj:
	* PyBinding/PyBinding/PythonSite.cs: Save PYTHONPATH to disk so we can
	reload it at next startup.  Store paths and the completion database in
	~/.config/MonoDevelop/PyBinding/Sites/<SiteName>/.

2009-08-24  Christian Hergert  <chris@dronelabs.com>

	* PyBinding.Gui/PythonEditorCompletion.cs:
	* PyBinding.Parser/PythonParser.cs: Add support for completion on files
	that are not attached to a project.

2009-08-24  Christian Hergert  <chris@dronelabs.com>

	* PyBinding.Parser/ParserDatabase.cs: No need for MaxValue.  OS X (and
	probably 32-bit in general) don't seem to like this.

2009-08-24  Christian Hergert  <chris@dronelabs.com>

	* PyBinding.csproj:
	* PyBinding/PythonSite.cs:
	* PyBinding/PythonConfiguration.cs:
	* PyBinding.Parser.Dom/PythonParsedDocument.cs:
	* PyBinding.Runtime/IPythonRuntime.cs:
	* PyBinding.Runtime/AbstractPythonRuntime.cs:
	* PyBinding.Gui/PythonOptionsPanel.cs:
	* PyBinding.Gui/PythonOptionsWidget.cs:
	* PyBinding.Gui/PythonEditorCompletion.cs:
	* gtk-gui/PyBinding.Gui.PythonOptionsWidget.cs:
	* gtk-gui/gui.stetic:
	* Resources/completion.py:
	* Resources/Schema.sql:
	* Makefile:
	* PyBinding.Parser/PythonParserInternal.cs:
	* PyBinding.Parser/ParserItem.cs:
	* PyBinding.Parser/PythonParser.cs:
	* PyBinding.Parser/ParserDatabase.cs:
	* PyBinding.Parser/ParserManager.cs:

	This commit is the first push towards making the PyBinding more stable.
	Code completion data for python site-modules can now be indexed and is
	stored in Sqlite using Mono.Data.Sqlite.  This sqlite library requires
	3.5 from everything I can gather.

	The Python editor widget has been updated to support adding/removing
	custom PYTHONPATH directories.
